--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=exam
-PORT=8080
+DB_PASSWORD=password
+DB_NAME=exam_db
+
 JWT_SECRET=supersecretjwtkey
+
+GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
+GOOGLE_REDIRECT_URI=http://localhost:8080/auth/google/callback
