--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
+ENV=development
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=exam_db
+
+FTP_HOST=153.92.9.222
+FTP_PORT=21
+FTP_USER=your_ftp_username
+FTP_PASSWORD=your_ftp_password
+FTP_REMOTE_PATH=/path/to/remote/directory
+FTP_DOMAIN=https://asset-exam.mastersekolah.com
 
 JWT_SECRET=supersecretjwtkey
 
